# dataroute

./: CMakeLists.txt  Makefile
cmake/: datarouteConfig.cmake.in
example/: router.cpp  serial.cpp
include/dataroute/: interface.hpp  packet.hpp  router.hpp  serial.hpp
src/: packet.cpp  serial.cpp
